Agrego metadatos de open graph

--- a/index.html
+++ b/index.html
@@ -3,6 +3,33 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+
+    <!-- Metados para SEO -->
+     <meta name="description" content="Perfil profesional de Dolores Parra, desarrolladora de frontend.">
+     <meta name="keywords" content="html, herramientas de depurado de metadatos, proyecto web">
+     <meta name="author" content="Dolores Parra">
+
+     <!-- Open Graph nos sirve para optimización en redes social como Facebook, Instagram y Whatsapp -->
+      <meta
+        property = "og:title"
+        content="Portafolio de Dolores Parra"
+      >
+      <meta
+        property="og:description"
+        content="Perfil profesional de Dolores Parra, desarrolladora de frontend."
+      >
+      <meta
+        property="og:image"
+        content="https://github.com/DoloresPGz/practica-html-avanzado/blob/main/assets/portada-open-graph.jpeg"
+      >
+      <meta
+        property="og:url"
+        content="https://dolorespgz.github.io/practica-html-avanzado/"
+      >
+      <meta
+        property="og:type"
+        content="profile"
+      >
     <title>Portafolio de Dolores Parra</title>
 </head>
 <body>
