Agrego los metadatos para Twitter(x)

--- a/index.html
+++ b/index.html
@@ -30,6 +30,24 @@
         property="og:type"
         content="profile"
       >
+
+      <!-- Twittr Cads para visualizar el contenido compartido en X -->
+       <meta
+        name="twitter:card"
+        content="summary_lage_image"
+       >
+       <meta
+        name="twitter:title"
+        content="Portafolio de Dolores Parra - desarrolladora de frontend"
+       >
+       <meta
+        name="twitter:description"
+        content="Descubre el portafolio de Dolores Parra, y sus proyectos de html"
+       >
+       <meta
+        name="twitter:image"
+        content="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcR6f-rXXKWAs3ZP0rcaSw5SG_48mvUXZN2kJZZmJJydXDQrnUTHBYU7drBai6j4_lFU-cw&usqp=CAU"
+       >
     <title>Portafolio de Dolores Parra</title>
 </head>
 <body>
