Corrigo metadato de card

--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
       <!-- Twittr Cads para visualizar el contenido compartido en X -->
        <meta
         name="twitter:card"
-        content="summary_lage_image"
+        content="summary_large_image"
        >
        <meta
         name="twitter:title"
