Agrego encabezado de mi portafolio

--- a/index.html
+++ b/index.html
@@ -51,6 +51,23 @@
     <title>Portafolio de Dolores Parra</title>
 </head>
 <body>
-    
+    <header>
+        <h1>Perfil de Dolores Parra</h1>
+        <!-- aria-label nos sirve para indicar el propósito de una etiqueta, en este caso
+         la etiqueta nav -->
+        <nav aria-label="Enlaces de redes sociales de Dolores Parra">
+            <ul>
+                <li>
+                    <a href="#">LinkeIn</a>
+                </li>
+                <li>
+                    <a href="#">GitHub</a>
+                </li>
+                <li>
+                    <a href="#">Twitter</a>
+                </li>
+            </ul>
+        </nav>
+    </header>
 </body>
 </html>
