--- a/index.html
+++ b/index.html
@@ -131,5 +131,21 @@
             <p>55 55 55 55 55</p>
          </aside>
     </main>
+    <footer>
+        <p>&copy; 2024 Dolores Parra. Todos los derechos reservados.</p>
+        <nav aria-label="Enlaces de redes sociales de Dolores Parra">
+            <ul>
+                <li>
+                    <a href="#">LinkeIn</a>
+                </li>
+                <li>
+                    <a href="#">GitHub</a>
+                </li>
+                <li>
+                    <a href="#">Twitter</a>
+                </li>
+            </ul>
+        </nav>
+     </footer>
 </body>
 </html>
