cambio el enlace de og:image

--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
       />
       <meta
         property="og:image"
-        content="https://github.com/DoloresPGz/practica-html-avanzado/blob/main/assets/portada-open-graph.jpeg"
+        content="https://raw.githubusercontent.com/DoloresPGz/practica-html-avanzado/refs/heads/main/assets/portada-open-graph.jpeg"
       />
       <meta
         property="og:url"
